Delete Action to Applications Table - Stable
